20110811 peripherals/disk/disk.c: fix one more instance of transposed memset
         arguments (patch #3388285) (Sergio Baldoví).
20110904 ui/gtk/pokemem.c: fix minor issues in the GTK+ UI (part of patch
         #3399216) (Sergio Baldoví).
20110904 menu_data.dat,ui/win32/{Makefile.am,pokemem.[ch],pokemem.rc,win32ui.c},
         windres.rc: add support for .pok files in win32 UI (rest of patch
         #3399216) (Sergio Baldoví).
20110905 debugger/{debugger.c,debugger_internals.h,event.c},event.c,fuse.c,
         memory.[ch],mempool.[ch],rzx.c,snapshot.c: free up memory (mostly
         GArray) when Fuse is exiting: memory, mempool, event, debugger/event,
         rzx (part of patch #3404090) (Sergio Baldoví).
20110910 menu_data.dat: fix compilation of non GTK+ and Win32 UIs (thanks,
         pmrtvcom) (Sergio Baldoví).
20110919 ui/fb/fbui.c,ui/sdl/sdlui.c,ui/svga/svgaui.c,ui/widget/{Makefile.am,
         menu.c,pokemem.c,widget.[ch],widget_internals.h}: add Poke Memory
         feature to the widget UIs (patch #3410145) (Sergio Baldoví).
20110919 ui/widget/widget.c: allow "Confirm actions" to be disabled in the
         widget UIs (patch #3410837) (Sergio Baldoví).
20110919 input.c: fix widget UI crash when JOYSTICK_FIRE_2 button is pressed
         just after Fuse starts up on non-Wii platforms (patch #3410841) (Sergio
         Baldoví).
20110925 ui/win32/installer/fuse.nsi: windows installer improvements; by
         default, don't register file extensions associated with other programs,
         association with file extensions can be individually enabled, add fuse
         to the OpenWith programs list for known extensions and add .pzx
         extension association (patch #3413548) (Sergio Baldoví).
20110927 debugger/disassemble.c: disassemble ED 4D as RETI (patch #3414394)
         (Simon Owen).
20111106 peripherals/disk/{disk.c,wd_fdc.c},snapshot.c,ui/gtk/options.pl:
         remove unused variables (thanks, gcc 4.6).